fix header spacing

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -222,12 +222,23 @@ pre
   background-color:main-bg
   padding-bottom:4px
 
-.blogentry h1 a,h2 a,h3 a,h4 a,h5 a,h6 a
-  color: blog-header-link
-.blogentry p, h1,h2,h3,h4,h5,h6,pre
+.blogcontent p,
+.blogcontent h2,
+.blogcontent h4,
+.blogcontent h5,
+.blogcontent h6,
+.blogcontent pre
   line-height:1em
   padding:1em
   margin:1em
+
+.blogentry h1 a,
+.blogentry h2 a,
+.blogentry h3 a,
+.blogentry h4 a,
+.blogentry h5 a,
+.blogentry h6 a
+  color: blog-header-link
 
 .tags
   border-top: solid 6px light 
